--- a/_sass/_bootstrap-variables.scss
+++ b/_sass/_bootstrap-variables.scss
@@ -17,4 +17,6 @@ $primary: $indigo;
 
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 
-$font-family-base: Merriweather, serif;
+$font-family-base: arial;
+
+
