--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/css/app.scss %}">
 </head>
 <body>
+    
+{% include nav.html %}
 {{ content }}
 {% include footer.html %}
 {% include scripts-bottom.html %}
