--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -3,12 +3,21 @@
   "../_vendor/bootstrap/scss/bootstrap";  // See _vendor/bootstrap/scss/bootstrap.scss
 
 h1 {
-  font-size: 30px;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 30px;
 }
 
+h2 {
+  font-size: 19px;
+}
 
 .navbar-nav {
   position: relative;
   float: center;
   font-size: 20px;
+}
+
+.galery {
+  margin-top: 30px;
 }
