--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     
 {% include nav.html %}
 {{ content }}
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 {% include footer.html %}
 {% include scripts-bottom.html %}
 </body>
