--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,22 @@
 <!-- <pre>{{nodes | inspect }}</pre> -->
 
 
-            <hr>
-                <div class="text-center center-block">
-                    <p class="txt-railway"></p>
-                    <br/>
-                        <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-                        <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-                        <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
-                        <a href="mailto:bootsnipp@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
-                </div>
-            <hr>
-</div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<nav class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-6">
+                <h4>SOCIALS</h4>
+                <i style="font-size:50px" class="fa iconen">&#xf230;</i>
+                <i style="font-size:50px" class="fa iconen">&#xf16d;</i>
+                <i style="font-size:50px" class="fa iconen">&#xf2ad;</i>
+                <i style="font-size:50px" class="fa iconen">&#xf16a;</i>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6">
+                <h4 class="footer-tekst text-right">. . . _ _ _ . . .</h4>
+                <p class="footer-tekst text-right">Deze website is gemaakt door Eeckhout Margot en Tackaert Simon, in opdracht van de arteveldehogeschool. Deze website is volledig fictief.</p>
+            </div>
+        </div>
+    </div>
+ </nav>
