--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -2,22 +2,5 @@
   "bootstrap-variables",                  // See _bootstrap-variables.scss
   "../_vendor/bootstrap/scss/bootstrap";  // See _vendor/bootstrap/scss/bootstrap.scss
 
-h1 {
-  font-size: 50px;
-  font-weight: bold;
-  margin-top: 30px;
-}
-
-h2 {
-  font-size: 19px;
-}
-
-.navbar-nav {
-  position: relative;
-  float: center;
-  font-size: 20px;
-}
-
-.galery {
-  margin-top: 30px;
-}
+@import "custom";
+@import "navigation";
