--- a/_sass/_bootstrap-variables.scss
+++ b/_sass/_bootstrap-variables.scss
@@ -11,6 +11,7 @@
 $indigo:  #15455f;
 $primary: $indigo;
 $info: #15455f;
+$warning: #15455f;
 
 
 
@@ -24,5 +25,7 @@ $info: #15455f;
 
 
 $font-family-base: 'Oswald', sans-serif;
+
+
 
 
