--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,14 +8,14 @@
 <nav class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-6">
-                <h4>SOCIALS</h4>
-                <i style="font-size:50px" class="fa iconen">&#xf230;</i>
-                <i style="font-size:50px" class="fa iconen">&#xf16d;</i>
-                <i style="font-size:50px" class="fa iconen">&#xf2ad;</i>
-                <i style="font-size:50px" class="fa iconen">&#xf16a;</i>
+            <div class="socials col-6 col-md-6 col-lg-6">
+                <h5>SOCIALS</h5>
+                <i style="font-size:40px" class="fa iconen">&#xf230;</i>
+                <i style="font-size:40px" class="fa iconen">&#xf16d;</i>
+                <i style="font-size:40px" class="fa iconen">&#xf2ad;</i>
+                <i style="font-size:40px" class="fa iconen">&#xf16a;</i>
             </div>
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-6 col-md-6 col-lg-6">
                 <h4 class="footer-tekst text-right">. . . _ _ _ . . .</h4>
                 <p class="footer-tekst text-right">Deze website is gemaakt door Eeckhout Margot en Tackaert Simon, in opdracht van de arteveldehogeschool. Deze website is volledig fictief.</p>
             </div>
