--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -32,6 +32,12 @@ h4 {
     margin-left: 30px;
 }
 
+h5 {
+    color:white;
+    font-size: 30px;
+    margin-top: -13px;
+}
+
 .titelpad {
     margin-bottom: 35px;
 }
@@ -103,9 +109,20 @@ transition: all 1s ease;
 }
 
 .footer {
-  margin-top: 30px;
-  height: 150px;
+  height: 170px;
   background-color: #09191f;
+  margin-top: 20px;
+}
+
+.socials {
+    margin-top: 40px;
+    font-size:10px;
+
+}
+
+.fa {
+    color:white;
+    padding: 5px;
 }
 
 // Plan je dag kalender //
@@ -401,7 +418,7 @@ hr {
 
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) and (max-width: 767px) { 
+@media (min-width: 576px)  { 
 
  }
 
