--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,17 +8,27 @@
 <nav class="footer">
     <div class="container">
         <div class="row">
-            <div class="socials col-6 col-md-6 col-lg-6">
+            <div class="socials col-12 col-md-6 col-lg-6">
                 <h5>SOCIALS</h5>
-                <i style="font-size:40px" class="fa iconen">&#xf230;</i>
-                <i style="font-size:40px" class="fa iconen">&#xf16d;</i>
-                <i style="font-size:40px" class="fa iconen">&#xf2ad;</i>
-                <i style="font-size:40px" class="fa iconen">&#xf16a;</i>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i style="font-size:50px" class="fa icoon">&#xf230;</i>
+                </a>
+                <a href="https://www.instagram.com/?hl=nl" target="_blank">
+                    <i style="font-size:50px" class="fa icoon">&#xf16d;</i>
+                </a>
+                <a href="https://www.snapchat.com/l/nl-nl/" target="_blank">
+                    <i style="font-size:50px" class="fa icoon">&#xf2ad;</i>
+                </a>
+                <a href="https://www.youtube.com/" target="_blank">
+                    <i style="font-size:50px" class="fa icoon">&#xf16a;</i>
+                </a>
             </div>
-            <div class="col-6 col-md-6 col-lg-6">
+
+            <div class="col-12 col-md-6 col-lg-6">
                 <h4 class="footer-tekst text-right">. . . _ _ _ . . .</h4>
                 <p class="footer-tekst text-right">Deze website is gemaakt door Eeckhout Margot en Tackaert Simon, in opdracht van de arteveldehogeschool. Deze website is volledig fictief.</p>
             </div>
+            
         </div>
     </div>
  </nav>
